tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__buffer__test__events-5.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: convert_events(&mut allocator)

---
[
    Clear(
        BatchBufferPointer {
            first: 0,
            len: 1,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 1,
            len: 5,
        },
    ),
]
