tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__buffer__test__events.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: events

---
[
    Write(
        BatchBufferPointer {
            first: 0,
            len: 1,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 1,
            len: 2,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 3,
            len: 4,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 7,
            len: 3,
        },
    ),
    Write(
        BatchBufferPointer {
            first: 10,
            len: 5,
        },
    ),
]
