tearchan-gfx/src/batch/v2/snapshots/tearchan_gfx__batch__v2__buffer__test__sort.snap
---
source: tearchan-gfx/src/batch/v2/buffer.rs
expression: convert_events(&mut allocator)

---
[
    Reallocate {
        from: BatchBufferPointer {
            first: 12,
            len: 1,
        },
        to: BatchBufferPointer {
            first: 0,
            len: 1,
        },
    },
    Write(
        BatchBufferPointer {
            first: 0,
            len: 1,
        },
    ),
    Reallocate {
        from: BatchBufferPointer {
            first: 5,
            len: 3,
        },
        to: BatchBufferPointer {
            first: 1,
            len: 3,
        },
    },
    Write(
        BatchBufferPointer {
            first: 1,
            len: 3,
        },
    ),
    Reallocate {
        from: BatchBufferPointer {
            first: 8,
            len: 4,
        },
        to: BatchBufferPointer {
            first: 4,
            len: 4,
        },
    },
    Write(
        BatchBufferPointer {
            first: 4,
            len: 4,
        },
    ),
    Reallocate {
        from: BatchBufferPointer {
            first: 0,
            len: 5,
        },
        to: BatchBufferPointer {
            first: 8,
            len: 5,
        },
    },
    Write(
        BatchBufferPointer {
            first: 8,
            len: 5,
        },
    ),
]
